Implemented check for existing ISBN
