# server.js
@@ -25,6 +25,7 @@ server.get('/books', bookStoreController.getAll);
 server.del('/books', bookStoreController.reset);
 server.post('/book', bookStoreController.create);
 server.get('/book/:isbn', bookStoreController.getByISBN);
+server.get('/book/:isbn/check', bookStoreController.checkISBN);
 server.put('/book/:isbn', bookStoreController.update);
 server.del('/book/:isbn', bookStoreController.delete);
 server.get('/info', serverController.info);
